# 2d-beagle

./: .gitignore  2d-beagle.sln  2d-beagle.vcxproj  CMakeLists.txt  README.md
headers/: filehelper.h
learnings/cpp/: undefined_behaviour.md
learnings/vulkan/: basic_concepts.md  bookmark.md  error_handling.md  graphics_pipeline.md  lifetimes.md  shaders.md  things_to_talk_about.md
shaders/: compile.bat
src/: filehelper.cpp  main.cpp
